--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
     "@tailwindcss/typography": "^0.5.15",
     "@tailwindcss/vite": "^4.1.3",
     "@types/connect-pg-simple": "^7.0.3",
+    "@types/cors": "^2.8.19",
     "@types/express": "4.17.21",
     "@types/express-session": "^1.18.0",
     "@types/node": "20.16.11",
@@ -92,6 +93,7 @@
     "@types/ws": "^8.5.13",
     "@vitejs/plugin-react": "^4.7.0",
     "autoprefixer": "^10.4.20",
+    "cors": "^2.8.5",
     "cross-env": "^10.0.0",
     "drizzle-kit": "^0.31.4",
     "esbuild": "^0.25.0",
