--- a/vercel.json
+++ b/vercel.json
@@ -4,6 +4,11 @@
 	"buildCommand": "npm run build",
 	"outputDirectory": "dist/public",
 	"framework": null,
+	"functions": {
+		"api/**/*.ts": {
+			"runtime": "nodejs18.x"
+		}
+	},
 	"rewrites": [
 		{ "source": "/(.*)", "destination": "/index.html" }
 	]
